Version ClaSS-0.9.30 release (2010/11/24)
-----------------------------------------

Added changing the stage field to the category_editor.

A House points total can now be calculated (fetchHousePointsTotal) and
displayed on the other groups page.


Version ClaSS-0.9.30 release (2010/11/12)
-----------------------------------------

Added pagestyle to the new_report form.

Generate report columns now check for strands and uses component
status to do so it its for a compound report.

Implemented 'compound' columns which are reports with just categories
not comments. The edit report script changed to make sense of
this. The mark table displays a numerical value for the categories checked.

The currency exchange rate for orders is now set in categorydef (and is removed
from school.php) to allow year on year changes.

The delete_transport_booking function can now update as well as delete
given an end date.

The checksidsaction js can now grab the vlaue of any form element
named by selectname (not just a select value) and checkboxes don't
have to be named sids either.

The transport print option accepts a date and is no longer limited
to the current day.

Both other groups and form groups in Admin given a print option. TODO:
fix the button submits in the table!

Removed list_studentsubjects script in favour of an equivalent curriculum function.

Exposed both sequence and status as part of list_course_subjects.

Fixed the report assessments to use profiles even with rcrid and to
pass curriculum year correctly.

Added an "absent" button to transport editor for cancelling single
rides.

Separate transport lists for AM, PM and just amendments.

Made fetchSubjectReports use crid strictly with regard to identifying assessments.

Added the possibility of residence staff to write summary report comments.

Change to fetch_report to allow comments within strands (needed for
the new category only report entries).


Version ClaSS-0.9.29 release (2010/10/30)